# digicampus-course-allocation

./: LICENSE  README.md
.github/: dependabot.yml
bundle_allocation/: .gitignore  pyproject.toml
bundle_allocation/bundle_allocation/: __init__.py  bundled_prob_serial.py  entities.py  iterative_rounding.py  lottery.py
bundle_allocation/tests/: data_vv.json  data_vv_complete.json  test_bundle_allocation.py  test_data.py
microservice/: README.md  allocations.db  app.py  auth.py  cli.py  config.py  marshmallow_vv_complete.json  models.py  pyproject.toml  requirements.txt
microservice/api/: allocation.py
microservice/jobs/: allocation.py
microservice/specification/: bundle-allocation_openapi.yaml
microservice/util/: build_database.py  generate_test_json.py  import_test_json.py
plugin/: .gitignore  BundleAllocationPlugin.class.php  README.md  compileTranslation.sh  composer.json  config-dist.inc.php  extractTranslation.sh  plugin.manifest
plugin/admissionrule/: BundleAllocationAdmission.class.php  rule.manifest
plugin/admissionrule/templates/: info.php
plugin/assets/vue/css/: admission.a3bf6cb0.css  admission.c832c45a.css  configure_rule.c91004a9.css  configure_rule.d6522444.css  configurerule.e318028c.css  configurerule.efe4b27a.css  enrollment.aafc5af3.css  enrollment.c5e92e46.css
plugin/assets/vue/js/: admission.3b86ccb5.js  admission.3b86ccb5.js.map  admission.3e71629e.js  admission.3e71629e.js.map  admission.862161f0.js  admission.862161f0.js.map  admission.cb252cdf.js  admission.cb252cdf.js.map  apply.4660b3ca.js  apply.4660b3ca.js.map  apply.e1a89887.js  apply.e1a89887.js.map  chunk-vendors.2dbaba87.js  chunk-vendors.2dbaba87.js.map  chunk-vendors.2f3acc05.js  chunk-vendors.2f3acc05.js.map  chunk-vendors.35261295.js  chunk-vendors.35261295.js.map  (+30 more)
plugin/classes/: BundleItem.class.php  RankingGroup.class.php
plugin/composer_modules/: autoload.php
plugin/composer_modules/composer/: autoload_real.php  autoload_static.php  installed.json
plugin/controllers/: admission.php  config.php  enrollment.php  overview.php  rule.php
plugin/cronjobs/: BundleAllocationAdmissionJob.class.php
plugin/migrations/: 000_todo  001_setup_admissionrule.php  002_setup_cronjob.php  003_setup_bpsdatabase.php
plugin/routes/: BundleAllocationRoutes.class.php
plugin/views/admission/: applications.php
plugin/views/configure_rule/: configure.php
plugin/views/configurerule/: configure.php
plugin/views/enrollment/: apply.php
plugin/views/overview/: index.php
plugin/vue/: .env  output.js  package-lock.json  package.json  vue.config.js
(+40 files in other folders)
