[tool.poetry]
name = "bundle_allocation"
version = "0.1.0"
description = "Library for efficiently allocating bundles of courses to students"
authors = ["Dat Le Thanh <dat.lethanh@student.uni-augsburg.de>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
jupyterlab = "^1.0"
yappi = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
