[tool.poetry]
name = "bundle-allocation-microservice"
version = "0.1.0"
description = ""
authors = ["Dat Le Thanh <dat.lethanh@student.uni-augsburg.de>"]

[tool.poetry.dependencies]
python = "^3.7.1"
connexion = {version = "^2.3", extras = ["swagger-ui"]}
marshmallow = {version = "^3.3"}
bundle_allocation = {path = "../bundle_allocation/"}
Flask-RQ2 = "^18.3"
flask_sqlalchemy = "^2.4"
flask_marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.0"
pandas = "^1.2.0"
gunicorn = "^20.0.4"
python-dotenv = "^0.15.0"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
